--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "antd": "^5.26.4",
     "dayjs": "^1.11.13",
+    "handlebars": "^4.7.8",
     "lucide-react": "^0.525.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
